--- a/Notebooks/new_user_functions.ipynb
+++ b/Notebooks/new_user_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -42,10 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os"
+   ]
   },
   {
    "cell_type": "code",
@@ -56,9 +58,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'xgboost_model.sav'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-100-a52d21e6c7ce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#load in our xgb classification model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mxgb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"xgboost_model.sav\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"rb\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'xgboost_model.sav'"
+     ]
+    }
+   ],
    "source": [
     "#load in our xgb classification model\n",
     "xgb = pickle.load(open(\"xgboost_model.sav\", \"rb\"))"
@@ -66,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,23 +210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['hand market stall line narrow concret path serv island main arteri offer usual assort good found across rural cambodia cheap noodl stack coca-cola bottl fake soccer jersey household clean product plastic bag carri home.. litter floor pile squeez sugarcan empti clam shell ocean plastic wrapper bottl cup straw empti bag swept way sight stark remind challeng resid koh sdach island surround archipelago face live harmoni environment.. five minut boat ride mainland cambodia koh sdach surround clear blue water sustain fish commun gener decad overfish indiscrimin wast dispos taken steep toll environment.. recommend eat half-truth teller aliv mariann williamson take trump']"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "xgb_text_prep(test_1)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,37 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " Sentences selected: [1, 6, 10, 11, 22, 24, 43]\n",
-      "\n",
-      " Total sentences: 49\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Swept out of the way, but not out of sight, it’s a stark reminder of the challenges residents of Koh Sdach island and the surrounding archipelago face in living harmoniously with their environment.. Just a five minute boat ride from mainland Cambodia, Koh Sdach is surrounded by clear blue waters that have sustained fishing communities for generations. But the plastic problem in these island communities is not just environmental. That doesn’t dissuade Oeun Sina, the loudest voice calling for better environmental practices on land and sea.. As deputy village chief on the island, Ms. Oeun Sina is trying to usher in a sea change in the way the 3,000 residents of her small fishing village see their island and the waters that surround it. She has taken it upon herself to educate her neighbors about recycling and trash disposal, and joins otherwise all-male community sea patrols in search of illegal fishing.. “I want my community to understand about plastics and not to fish illegally,” she says, sitting outside her house, as her three grandchildren play at her feet. Such price differences mean that there is no market in remote areas for plastic collection, explains Commune Chief Sok Chay.. “People here just throw everything away as there is no way to sell the plastic,” he says.. Old fishing nets full of empty beer and soft drink cans are common across the island.His response has been to instigate regular community cleanup days.. “Experts have told me that the plastic in the water is bad for our health, as the fish eat it and then we eat the fish. Some 30 students and 30 government people come to collect litter, plus a few people from the village,” he says.. Mr. Sok Chay sees no solution to the problem of waste and recycling other than burning waste. There will also be a focus on supporting the communities with their plastic and waste management problems.. For Mr. Sok Chay, the growing interest from the community and government in the long-term protection of the local environment is a source of pride.. “I am optimistic for the future.'"
-      ]
-     },
-     "execution_count": 242,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "build_summary(test_1)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -374,29 +352,145 @@
      "output_type": "stream",
      "text": [
       "Enter a url: \n",
-      "https://news.yahoo.com/democrat-warren-wants-7-billion-134454649.html;_ylt=AwrC1DGZ8gddwlsAJwLQtDMD;_ylu=X3oDMTEydDBqZzZmBGNvbG8DYmYxBHBvcwMyBHZ0aWQDQjc2MDlfMQRzZWMDc3I-\n",
+      "https://www.nytimes.com/2019/06/14/books/review/podcast-underland-robert-macfarlane-disappearing-earth-julia-phillips.html\n",
       "\n",
-      "\n",
-      "This article was placed into cluster: 3\n",
-      "\n",
-      " Sentences selected: [0, 5, 7, 9]\n",
-      "\n",
-      " Total sentences: 12\n"
+      "\n"
      ]
     },
     {
+     "ename": "NameError",
+     "evalue": "name 'xgb' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-91-a1c19aa1e0c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mxgb_and_summary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-90-98798d7ab91a>\u001b[0m in \u001b[0;36mxgb_and_summary\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mxgb_preprocess\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxgb_text_prep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'This article was placed into cluster:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxgb_preprocess\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0msummary\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuild_summary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'xgb' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "xgb_and_summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_ny_articles(url):\n",
+    "    page = create_soup(url)\n",
+    "    a= test_.find_all('a', href = True)\n",
+    "    \n",
+    "    ny_times_links = []\n",
+    "    for a in test_.find_all('a', href=True):\n",
+    "        ny_times_links.append(a['href'])\n",
+    "    \n",
+    "    ny_times_articles = []\n",
+    "    for i in ny_times_links:\n",
+    "        if i[0] == '/' and len(i)>2 and i.endswith('Container') == False:\n",
+    "            ny_times_articles.append(i)\n",
+    "    \n",
+    "    article_set = set(ny_times_articles)\n",
+    "    return article_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "'By Ginger Gibson WASHINGTON (Reuters) - Democratic presidential hopeful Elizabeth Warren is proposing creating a $7 billion fund to provide grants to help more minorities start their own business, she announced on Friday. The fund would provide grants - not loans or loan guarantees - to minority entrepreneurs, Warren is proposing. Warren would have the program administered by state and local governments. Additionally, Warren wants to require the states and local governments administering her program to hire more minority investment managers.'"
+       "{'/2019/06/14/books/review/podcast-underland-robert-macfarlane-disappearing-earth-julia-phillips.html',\n",
+       " '/2019/06/14/the-weekly/trump-immigration-border-separation-family.html',\n",
+       " '/2019/06/18/arts/music/taylor-swift-you-need-to-calm-down-video.html',\n",
+       " '/2019/06/18/books/pakistan-darra-adam-khel-library.html',\n",
+       " '/2019/06/18/briefing/patrick-shanahan-orlando-taylor-swift.html',\n",
+       " '/2019/06/18/business/ecb-mario-draghi-stimulus.html',\n",
+       " '/2019/06/18/business/economy/global-economy-trade-war.html',\n",
+       " '/2019/06/18/business/japan-work-overtime-tv-show.html',\n",
+       " '/2019/06/18/dining/van-da-restaurant-review.html',\n",
+       " '/2019/06/18/nyregion/central-park-five-trump.html',\n",
+       " '/2019/06/18/nyregion/greenhouse-gases-ny.html',\n",
+       " '/2019/06/18/opinion/androgyny-wnba-fashion.html',\n",
+       " '/2019/06/18/opinion/guatemala-election.html',\n",
+       " '/2019/06/18/opinion/morsi-death-egypt.html',\n",
+       " '/2019/06/18/opinion/pete-chasten-buttigieg.html',\n",
+       " '/2019/06/18/opinion/pregnant-athlete-sponsor-climber.html',\n",
+       " '/2019/06/18/opinion/religion-race-liberalism.html',\n",
+       " '/2019/06/18/opinion/republican-party-women.html',\n",
+       " '/2019/06/18/opinion/sarah-sanders-trump.html',\n",
+       " '/2019/06/18/opinion/tiffany-caban.html',\n",
+       " '/2019/06/18/opinion/trump-2020-campaign.html',\n",
+       " '/2019/06/18/opinion/trump-iran-north-korea.html',\n",
+       " '/2019/06/18/us/politics/donald-trump-rally-orlando.html',\n",
+       " '/2019/06/18/us/politics/patrick-shanahan-defense-secretary.html',\n",
+       " '/2019/06/18/us/politics/trump-fact-check-rally.html',\n",
+       " '/2019/06/18/us/politics/trump-immigration-deportations.html',\n",
+       " '/2019/06/18/us/trump-falwell-endorsement-michael-cohen.html'}"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xgb_and_summary()"
+    "get_ny_articles('https://www.nytimes.com/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_an"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Advertisement Subscribe: iTunes | Google Play Music | How to Listen The acclaimed British writer Robert Macfarlane, who is not altogether comfortable with the term “nature writer,” has produced books about mountains, very long walks through Britain and the language we use to describe landscapes. In his new book, “Underland,” Macfarlane goes underground. He goes beneath forest floors, and into sea caves and sinkholes, among other subterranean adventures, to probe the secrets of man’s often malign influence on the earth. “It’s pretty unnatural,” Macfarlane says on this week’s podcast. “There are reasons why very little living goes on down there. Before I went anywhere, I got a friend to take me — I just said, look, take me underground for a day in Britain, let’s go somewhere scary. I need to see if I can be in these places. And I absolutely loved it. He described me later as a ‘rat in a drain pipe.’ I think that was a compliment, I’m not sure.”  Julia Phillips visits the podcast this week to discuss her debut novel, “Disappearing Earth.” The book is set on the Kamchatka Peninsula in far eastern Russia — a place that is not easy to get to, but that Phillips visited in order to write the novel. “I was extraordinarily lucky to be treated to so kindly and hospitably by everyone I met,” Phillips says. “In Moscow, for example, an American is not an unusual thing at all. But in Kamchatka, which has a population of 400,000, I was one of I believe 10 Americans there. So I was unusual enough that if I went to a fruit stand to buy fruit, someone would say, ‘Oh, you’re the American writer who has come to stay with us and write a book about Kamchatka.’ People really went out of their way to introduce me to the region and take care of me, and I am forever grateful for that.” Also on this week’s episode, Alexandra Alter has news from the publishing world; and Dwight Garner, Parul Sehgal and Jennifer Szalai talk about the books they’ve recently reviewed. Pamela Paul is the host. Here are the books discussed by The Times’s critics this week: “Let Me Not Be Mad: My Story of Unraveling Minds” by A.K. Benjamin “Reckoning: The Epic Battle Against Sexual Abuse and Harassment” by Linda Hirshman “The Capital” by Robert Menasse We would love to hear your thoughts about this episode, and about the Book Review’s podcast in general. You can send them to books@nytimes.com. Advertisement'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_article_text('https://www.nytimes.com/2019/06/14/books/review/podcast-underland-robert-macfarlane-disappearing-earth-julia-phillips.html')"
    ]
   },
   {
