cleaned notebooks and folders

--- a/Notebooks/Text_Cleaning_and_KMeans.ipynb
+++ b/Notebooks/Text_Cleaning_and_KMeans.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('df_with_gensim_summaries.csv')"
+    "df = pd.read_csv('../Data/df_with_gensim_summaries.csv')"
    ]
   },
   {
@@ -579,7 +579,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('df_english_articles.csv')"
+    "df = pd.read_csv('../Data/df_english_articles.csv')"
    ]
   },
   {
@@ -939,7 +939,7 @@
    "outputs": [],
    "source": [
     "#save kmeans12 model for further use\n",
-    "pickle.dump(kmeans12, open(\"kmeans12.pkl\", \"wb\"))"
+    "pickle.dump(kmeans12, open(\"../Models/kmeans12.pkl\", \"wb\"))"
    ]
   },
   {
@@ -1078,7 +1078,7 @@
    "outputs": [],
    "source": [
     "#CHECKPOINT --- SAVE TO CSV TO AVOID RUNNING KMEANS FUNCTIONS AGAIN\n",
-    "kmeans_df.to_csv('kmeans_df.csv')"
+    "kmeans_df.to_csv('../Models/kmeans_df.csv')"
    ]
   },
   {
@@ -1087,7 +1087,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kmeans_df = pd.read_csv('kmeans_df.csv')"
+    "kmeans_df = pd.read_csv('../Modelskmeans_df.csv')"
    ]
   },
   {
@@ -1730,7 +1730,7 @@
    "outputs": [],
    "source": [
     "#overwrite previous csv with clusters df\n",
-    "df_clusters.to_csv('df_english_articles.csv')"
+    "df_clusters.to_csv('../Data/df_english_articles.csv')"
    ]
   },
   {
