--- a/Notebooks/new_user_functions.ipynb
+++ b/Notebooks/new_user_functions.ipynb
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "#load in our xgb classification model\n",
-    "xgb = pickle.load(open(\"xgboost_model.sav\", \"rb\"))"
+    "xgb = pickle.load(open(\"../Models/xgboost_model.sav\", \"rb\"))"
    ]
   },
   {
