--- a/Notebooks/summarizer_cosine_similarity.ipynb
+++ b/Notebooks/summarizer_cosine_similarity.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('df_with_gensim_summaries.csv')"
+    "df = pd.read_csv('../Data/df_with_gensim_summaries.csv')"
    ]
   },
   {
