--- a/Notebooks/new_user_functions.ipynb
+++ b/Notebooks/new_user_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -314,20 +314,20 @@
     {
      "data": {
       "text/plain": [
-       "('https://www.nytimes.com/2019/06/17/books/review/kate-atkinson-jackson-brodie-big-sky.html',\n",
-       " [0, 2, 4, 14, 23, 32, 34],\n",
-       " 43,\n",
-       " 3,\n",
-       " 'Advertisement Supported by By Janet Maslin There’s a spoiled little girl in “Big Sky,” the long-overdue fifth book in Kate Atkinson’s irresistible Jackson Brodie private eye series, who has a closet full of princess costumes. Atkinson sneaks this into “Big Sky” so casually that it doesn’t resonate until exactly when the author wants it to. in all the Brodie books, but it’s never worked better than it does in “Big Sky.” That’s because Brodie’s past is by now very complicated. Atkinson has said that she loves Netflix, attributes the same feeling to Brodie, and has had a previous Brodie book, “Case Histories,” adapted for PBS. There is no stray anything in “Big Sky.” That’s one big reason Atkinson’s devotees love her. Brodie has been Atkinson’s most popular character for good reason. Atkinson opens “Big Sky” with one perfect page.')"
+       "('https://news.yahoo.com/u-supreme-court-spurns-virginia-143413283.html;_ylt=AwrC0COK7wddIj8AGCPQtDMD;_ylu=X3oDMTEydGhybm9tBGNvbG8DYmYxBHBvcwMxBHZ0aWQDQjc2MDlfMQRzZWMDc3I-',\n",
+       " [0, 2, 8, 13, 16, 20],\n",
+       " 28,\n",
+       " 7,\n",
+       " 'By Lawrence Hurley WASHINGTON (Reuters) - The U.S. Supreme Court on Monday handed Republican legislators in Virginia a defeat, leaving in place a ruling that invalidated state electoral districts they drew because they weakened the clout of black voters in violation of the U.S. Constitution. They instead found that the Republican-led state House of Delegates lacked the necessary legal standing to appeal a lower court ruling that had invalidated 11 state House districts for racial discrimination. The state\\'s Republican-led House of Delegates \"lacks authority to displace Virginia\\'s attorney general as representative of the state,\" Justice Ruth Bader Ginsburg wrote for the court\\'s majority. In this case, the Republican legislators were accused of racial gerrymandering to disadvantage black voters. At issue in the Virginia case was the state legislative map drawn by Republicans after the 2010 national census. Since the Virginia maps that were challenged in the case were drawn, Democrats have made gains in Virginia in both state and federal elections.')"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xgb_and_summary('https://www.nytimes.com/2019/06/17/books/review/kate-atkinson-jackson-brodie-big-sky.html')"
+    "xgb_and_summary('https://news.yahoo.com/u-supreme-court-spurns-virginia-143413283.html;_ylt=AwrC0COK7wddIj8AGCPQtDMD;_ylu=X3oDMTEydGhybm9tBGNvbG8DYmYxBHBvcwMxBHZ0aWQDQjc2MDlfMQRzZWMDc3I-')"
    ]
   },
   {
